# django-starter

./: .dockerignore  Dockerfile  README.md  compose.yml  entrypoint.sh  manage.py  pyproject.toml
src/django_starter/: __init__.py  cli.py
src/django_starter/config/: asgi.py  settings.py  urls.py  wsgi.py
src/django_starter/starterapp/: test_init2.py  tests.py
tests/django_starter/: __init__.py
